--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 
     </header>
     <main>
-        <div class="container mt-5 animate__animated animate__bounceInUp">
+      <section>
+        <img src="img/imagenhd.png" alt="Nacional" class="img-fluid w-100"> 
+      </section>
+        <div class="wow container mt-5 animate__animated animate__bounceInUp">
             <div class="row d-flex justify-content-center">
                 <div class="col-12 col-md-4 ">
                     <img src="img/nacional.png" alt="Nacional" class="img-fluid w-100">
@@ -102,7 +105,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 text-white">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, inventore adipisci. Reprehenderit quis ipsam ipsum veritatis quisquam nobis corrupti at ratione tempore natus, delectus voluptatum itaque mollitia nulla omnis earum?</p>
 
                     </div>
@@ -111,12 +114,69 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
             </div>
         </section>
 
-    </main>
-    <footer>
-
-
+          <section class="mt-5 mb-5 animate__animated animate__bounceInUp wow">
+            <div class="container">
+              <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                  <div class="card h-100">
+                    <img src="img/card-1.png" class="card-img-top" alt="card-1">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100">  
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      </div>
+                      <hr>
+                    <img src="img/card-1.png" class="card-img-top" alt="card-2">
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100">
+                    <img src="img/card-1.png" class="card-img-top" alt="card-3">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+         </main>
+    <footer class="bg-dark mt-4 p-3 ">
+      <div class="container text-white">
+        <div class="row">
+          <div class="col-12 col-md-4">
+            <p>Edison mesa tapias &copy;</p>
+            <p>Equipo profecional </p>
+            <p>Atletico Nacional</p>
+            <p>Eliminado de la liga colombiana de futbol</p>
+            <p>lider toda la liga para nada</p>
+          </div>
+          <div class="col-12 col-md-4">
+            <p>Edison mesa tapias &copy;</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, veritatis mollitia vero tempora debitis magni excepturi explicabo minima, consequuntur sit atque ipsa placeat officia dicta, repellat cupiditate quidem fugit sint!</p>
+          </div>
+          <div class="col-12 col-md-4">
+            <p>Edison mesa tapias &copy;</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, eligendi ullam molestiae blanditiis, fugit quae eum exercitationem veniam asperiores architecto corporis voluptate assumenda aut nostrum, rerum velit accusamus tempore nesciunt!</p>
+          </div>
+        </div>
+      </div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a2501e2248.js" crossorigin="anonymous"></script>
+
+    <script src="wow.min.js"></script>
+    <script>
+    new WOW().init();
+    </script>
 </body>
 </html>
