--- a/index.html
+++ b/index.html
@@ -18,36 +18,36 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     <header class="animate__animated animate__bounce"> 
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Nacional <i class="fas fa-futbol"></i></i></a>
+          <a class="navbar-brand" href="index.html">Atletico Nacional <i class="fas fa-futbol"></i></i></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">INICIO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">EQUIPO</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
+                  TIENDA
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">ROPA</a></li>
+                  <li><a class="dropdown-item" href="#">ABONADOS</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="#">ACERCA DE</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">Disabled </a>
+                <a class="nav-link disabled"></a>
               </li>
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <button class="btn btn-outline-success bg-white text-dark" type="submit">Search</button>
             </form>
           </div>
         </div>
@@ -62,12 +62,13 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         <div class="wow container mt-5 animate__animated animate__bounceInUp">
             <div class="row d-flex justify-content-center">
                 <div class="col-12 col-md-4 ">
-                    <img src="img/nacional.png" alt="Nacional" class="img-fluid w-100">
+                    <img src="img/nacional.png " alt="Nacional" class="img-fluid w-100">
                 </div>
                 <div class="col-12 col-md-4 text-white">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur ad possimus reprehenderit in quae? Magnam ratione cupiditate aut alias ut accusantium maiores eius velit, deleniti dicta voluptas dignissimos itaque saepe! 
+                    <p>Registrate y forma parte de tu Equipo favorito como abonado este 2022 aprovechando 
+                      todos sus beneficios y maxima asistencia a todos los partidos.
                     </p>
-                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+                    <button class="btn btn-primary bg-white text-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
                         <i class="fas fa-sign-in-alt"></i>
                         REGISTRATE
                     </button>
@@ -106,7 +107,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-white">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, inventore adipisci. Reprehenderit quis ipsam ipsum veritatis quisquam nobis corrupti at ratione tempore natus, delectus voluptatum itaque mollitia nulla omnis earum?</p>
+                        <p>Atlético Nacional es un club de fútbol de la ciudad de Medellín, Colombia. Es considerado uno de los clubes más populares de Colombia y de Sudamérica.12​ Fundado el 7 de marzo de 1947 bajo el nombre de Club Atlético Municipal de Medellín y registrado por escritura pública el 30 de abril de 1947 en la notaría primera de Medellín. En 1950, el expresidente de la Liga Antioqueña de fútbol, Luis Alberto Villegas, cambió el nombre del club por Club Atlético Nacional.13​ El club participa en la máxima categoría de la División Mayor del Fútbol Colombiano, la Categoría Primera A desde su fundación en 1948</p>
 
                     </div>
                 </div>
@@ -149,8 +150,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
             </div>
           </section>
          </main>
-    <footer class="bg-dark mt-4 p-3 ">
-      <div class="container text-white">
+    <footer class="bg-white  mt-4 p-3 ">
+      <div class="container text-dark">
         <div class="row">
           <div class="col-12 col-md-4">
             <p>Edison mesa tapias &copy;</p>
