--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">INICIO</a>
+                <a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">EQUIPO</a>
+                <a class="nav-link" href="views/equipo.html">EQUIPO</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  TIENDA
+                  CONOCE MAS
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">ROPA</a></li>
-                  <li><a class="dropdown-item" href="#">ABONADOS</a></li>
+                  <li><a class="dropdown-item" href="views/tienda.html">TIENDA</a></li>
+                  <li><a class="dropdown-item" href="views/acercaDe.html">ACERCA DE</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">ACERCA DE</a></li>
                 </ul>
@@ -158,7 +158,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
             <p>Equipo profecional </p>
             <p>Atletico Nacional</p>
             <p>Eliminado de la liga colombiana de futbol</p>
-            <p>lider toda la liga para nada</p>
+            <p>Rey de copas</p>
           </div>
           <div class="col-12 col-md-4">
             <p>Edison mesa tapias &copy;</p>
