modificacion de pagina

--- a/index.html
+++ b/index.html
@@ -100,9 +100,6 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                 </div>
               </div>
         </section>
-        <section class="fondobanner">
-
-        </section>
         <section>
             <div class="container">
                 <div class="row">
@@ -120,7 +117,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
               <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
                   <div class="card h-100">
-                    <img src="img/card-1.png" class="card-img-top" alt="card-1">
+                    <img src="img/card-4.jpg" class="card-img-top" alt="card-1">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -133,13 +130,13 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                       </div>
-                      <hr>
-                    <img src="img/card-1.png" class="card-img-top" alt="card-2">
+                      
+                    <img src="img/card-2.jpg" class="card-img-top" alt="card-2">
                   </div>
                 </div>
                 <div class="col">
                   <div class="card h-100">
-                    <img src="img/card-1.png" class="card-img-top" alt="card-3">
+                    <img src="img/card-3.jpg" class="card-img-top" alt="card-3">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
