--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         <div class="wow container mt-5 animate__animated animate__bounceInUp">
             <div class="row d-flex justify-content-center">
                 <div class="col-12 col-md-4 ">
-                    <img src="img/nacional.png " alt="Nacional" class="img-fluid w-100">
+                    <img src="img/nacional.png" alt="Nacional" class="img-fluid w-100">
                 </div>
                 <div class="col-12 col-md-4 text-white">
                     <p>Registrate y forma parte de tu Equipo favorito como abonado este 2022 aprovechando 
@@ -119,15 +119,15 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                   <div class="card h-100">
                     <img src="img/card-4.jpg" class="card-img-top" alt="card-1">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <h5 class="card-title text-success">Card title</h5>
+                      <p class="card-text ">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     </div>
                   </div>
                 </div>
                 <div class="col">
                   <div class="card h-100">  
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title text-success">Card title</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                       </div>
                       
@@ -138,7 +138,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                   <div class="card h-100">
                     <img src="img/card-3.jpg" class="card-img-top" alt="card-3">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title text-success">Card title</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     </div>
                   </div>
