--- a/index.html
+++ b/index.html
@@ -146,6 +146,13 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
               </div>
             </div>
           </section>
+          <section>
+            <div class="container-fluid">
+              <div class="row mt-3">
+                <img src="img/verde.png" class="" alt="">
+              </div>
+            </div>
+          </section>
          </main>
     <footer class="bg-white  mt-4 p-3 ">
       <div class="container text-dark">
