--- a/index.html
+++ b/index.html
@@ -155,6 +155,32 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
             </div>
           </section>
          </main>
+        <section>
+          <!-- Modal -->
+          <div class="modal fade " id="modallogin">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header bg-success">
+                  <h5 class="modal-title text-white" id="exampleModalLabel">Registro </h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-12">
+                        <h4 id="mensajeLogin"></h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary bg-success">Save changes</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
     <footer class="bg-white  mt-4 p-3 ">
       <div class="container text-dark">
         <div class="row">
